--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "reactworkshop",
+  "name": "react-workshop",
   "version": "0.2.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
